# vgi-code

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-entrypoint.sh
.github/workflows/: ci.yml  docker-publish.yml  release.yml
ci/: README.md  run-integration.sh
crates/code-wasm/: Cargo.toml
crates/code-wasm/src/: lib.rs
crates/code-worker/: Cargo.toml
crates/code-worker/src/: lib.rs  main.rs  meta.rs  parsing.rs
crates/code-worker/src/scalar/: counts.rs  language.rs  lists.rs  mod.rs  query.rs  version.rs
crates/code-worker/src/table/: mod.rs  supported_languages.rs  symbols.rs  ts_nodes.rs
crates/code-worker/tests/: analyze.rs
test/sql/: scalars.test  symbols.test
wasm/: build.sh
