[workspace]
resolver = "2"
members = ["crates/code-worker", "crates/code-wasm"]
# code-wasm only makes sense for wasm32-unknown-emscripten (it is a staticlib
# whose ring ops are supplied by emcc's --js-library), so keep it out of the
# default set: bare `cargo build` / `test` / `clippy` stay native-only and
# unchanged. Build it explicitly with `wasm/build.sh` or `-p code-wasm`.
default-members = ["crates/code-worker"]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.97"
license = "MIT"
authors = ["Query Farm LLC <hello@query.farm>"]
repository = "https://github.com/Query-farm/vgi-code"

[workspace.dependencies]
# VGI Rust SDK (worker side), published on crates.io. 0.24 provides the wasm
# `vgi::wasm_worker!` macro used by code-wasm; requires rustc 1.97. Base
# (feature-less) so each target can opt in: the native build takes the SDK's real
# defaults (`sqlite` + `transport-http`), while the wasm build must NOT —
# tokio/mio/axum and bundled SQLite do not compile for wasm32, and the browser
# transport serves over a byte channel rather than HTTP. Features are additive,
# and the two are behind mutually-exclusive target cfgs.
vgi = { version = "0.24", default-features = false }
vgi-rpc = { version = "0.16", default-features = false, features = ["macros"] }
arrow-array = "59"
arrow-buffer = "59"
arrow-schema = "59"

# tree-sitter parsing core. Pinned to the 0.25 line: its MSRV (1.76) is under the
# workspace rust-version (1.86), and — like every grammar crate below — it depends
# only on the ABI-stable `tree-sitter-language ^0.1` shim, so the grammars' exported
# `LANGUAGE: LanguageFn` constants unify with this core. (0.25's `Query` matches are
# a `streaming-iterator`, hence the `streaming-iterator` dep.) 0.26 also works but
# we stay on the well-worn 0.25 line.
tree-sitter = "0.25"
streaming-iterator = "0.1"

# Grammar crates. Each exposes a `LANGUAGE: LanguageFn` (via `tree-sitter-language
# ^0.1`) and is otherwise independent of the core version — that shim is what makes
# the otherwise-divergent grammar versions (0.23–0.25) all link against one
# `tree-sitter` core. Versions are the latest stable for each as of pinning. All
# crates are MIT (grammars) / MIT-or-Apache — documented in README/CLAUDE.md.
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-json = "0.24"

[profile.release]
opt-level = 2
